feat: Add full Gemini Nano (Chrome Built-in AI) support
- Fix Gemini Nano model selection UI with topK parameter slider
- Update API integration to use correct LanguageModel global object
- Add proper provider detection for withStructuredOutput bypass
- Implement message conversion for non-function-calling models
- Add comprehensive debugging logs for Gemini Nano responses

--- a/packages/i18n/locales/zh_TW/messages.json
+++ b/packages/i18n/locales/zh_TW/messages.json
@@ -328,6 +328,9 @@
   "options_models_labels_topP": {
     "message": "Top P"
   },
+  "options_models_labels_topK": {
+    "message": "Top K"
+  },
   "options_models_labels_reasoning": {
     "message": "推理"
   },
