--- a/packages/i18n/locales/en/messages.json
+++ b/packages/i18n/locales/en/messages.json
@@ -333,6 +333,9 @@
   "options_models_labels_topP": {
     "message": "Top P"
   },
+  "options_models_labels_topK": {
+    "message": "Top K"
+  },
   "options_models_labels_reasoning": {
     "message": "Reasoning"
   },
