--- a/packages/i18n/locales/pt_BR/messages.json
+++ b/packages/i18n/locales/pt_BR/messages.json
@@ -332,6 +332,9 @@
   "options_models_labels_topP": {
     "message": "Top P"
   },
+  "options_models_labels_topK": {
+    "message": "Top K"
+  },
   "options_models_labels_reasoning": {
     "message": "Raciocínio"
   },
